--- a/_posts/2020-08-26-Java-线程.md
+++ b/_posts/2020-08-26-Java-线程.md
@@ -109,7 +109,7 @@ b.join()
 
 # 多线程内存区域
 
-![java多线程内存区域](/Users/jessica/ideaproject-github/jessica0530.github.io/images/posts/java多线程内存区域.png)
+![java多线程内存区域](/images/posts/java多线程内存区域.png)
 
 ## 程序计数器为什么是私有的
 
