--- a/_posts/2020-09-25-分布式数据存储.md
+++ b/_posts/2020-09-25-分布式数据存储.md
@@ -96,7 +96,7 @@ keywords: 分布式
 
 一致性哈希是指将存储节点和数据都映射到一个首尾相连的哈希环上，存储节点可以根据 IP 地址进行哈希，数据通常通过顺时针方向寻找的方式，来确定自己所属的存储节点，即从数据映射在环上的位置开始，顺时针方向找到的第一个存储节点
 
-![一致性哈希](/Users/jessica/ideaproject-github/jessica0530.github.io/images/posts/一致性哈希.png)
+![一致性哈希](/images/posts/一致性哈希.png)
 
 一致性哈希是对哈希方法的改进，在数据存储时采用哈希方式确定存储位置的基础上，又增加了一层哈希，也就是在数据存储前，对存储节点预先进行了哈希。这种改进可以很好地解决哈希方法存在的稳定性问题。当节点加入或退出时，仅影响该节点在哈希环上顺时针相邻的后继节点。比如，当 Node2 发生故障需要移除时，由于 Node3 是 Node2 顺时针方向的后继节点，本应存储到 Node2 的数据就会存储到 Node3 中，其他节点不会受到影响，因此不会发生大规模的数据迁移。
 
@@ -126,4 +126,4 @@ keywords: 分布式
 
 当然，这种方法引入了虚拟节点，增加了节点规模，从而增加了节点的维护和管理的复杂度，比如新增一个节点或一个节点故障时，对应到虚拟节点构建的哈希环上需要新增和删除多个节点，数据的迁移等操作相应地也会很复杂
 
-![虚拟节点的一致性](/Users/jessica/ideaproject-github/jessica0530.github.io/images/posts/虚拟节点的一致性.png)
+![虚拟节点的一致性](/images/posts/虚拟节点的一致性.png)
