[Blog-32] add new article

--- a/_posts/2020-09-20-RocksDB.md
+++ b/_posts/2020-09-20-RocksDB.md
@@ -154,3 +154,70 @@ https://rocksdb.org.cn/doc/Leveled-Compaction.html
 - 从字符串或映射中获取选项
 - 永久性选项文件
 
+
+
+
+
+# ROCKSDB的调优参数
+
+
+
+
+
+
+
+读放大,写放大,和空间放大
+
+
+
+```
+RocksDB 和 LevelDB 通过后台的 compaction 来减少读放大（减少 SST 文件数量）和空间放大（清理过期数据），但也因此带来了写放大（Write Amplification）的问题。
+
+- 写放大。实际写入 HDD/SSD 的数据大小和程序要求写入数据大小之比。正常情况下，HDD/SSD 观察到的写入数据多于上层程序写入的数据
+```
+
+
+
+
+
+在这三个因子里面取得平衡
+
+
+
+## **MemTable**
+
+
+
+- **write_buffer_size | state.backend.rocksdb.writebuffer.size**
+  单个 memtable 的大小，默认是64MB。当 memtable 大小达到此阈值时，就会被标记为不可变。一般来讲，适当增大这个参数可以减小写放大带来的影响，但同时会增大 flush 后 L0、L1 层的压力，所以还需要配合修改 compaction 参数，后面再提。
+
+- **max_write_buffer_number | state.backend.rocksdb.writebuffer.count**
+  memtable 的最大数量（包含活跃的和不可变的），默认是2。当全部 memtable 都写满但是 flush 速度较慢时，就会造成写停顿，所以如果内存充足或者使用的是机械硬盘，建议适当调大这个参数，如4。
+
+- **min_write_buffer_number_to_merge | state.backend.rocksdb.writebuffer.number-to-merge**
+  在 flush 发生之前被合并的 memtable 最小数量，默认是1。举个例子，如果此参数设为2，那么当有至少两个不可变 memtable 时，才有可能触发 flush（亦即如果只有一个不可变 memtable，就会等待）。调大这个值的好处是可以使更多的更改在 flush 前就被合并，降低写放大，但同时又可能增加读放大，因为读取数据时要检查的 memtable 变多了。经测试，该参数设为2或3相对较好。
+
+## **Block/Block Cache**
+
+block 是 sstable 的基本存储单位。block cache 则扮演读缓存的角色，采用 LRU 算法存储最近使用的 block，对读性能有较大的影响。
+
+
+
+- **block_size | state.backend.rocksdb.block.blocksize**
+  block 的大小，默认值为4KB。在生产环境中总是会适当调大一些，一般32KB比较合适，对于机械硬盘可以再增大到128~256KB，充分利用其顺序读取能力。但是需要注意，如果 block 大小增大而 block cache 大小不变，那么缓存的 block 数量会减少，无形中会增加读放大。
+
+- **block_cache_size | state.backend.rocksdb.block.cache-size**
+  block cache 的大小，默认为8MB。由上文所述的读写流程可知，较大的 block cache 可以有效避免热数据的读请求落到 sstable 上，所以若内存余量充足，建议设置到128MB甚至256MB，读性能会有非常明显的提升。
+
+## **Compaction**
+
+
+
+- **target_file_size_base | state.backend.rocksdb.compaction.level.target-file-size-base**
+  L1层单个 sstable 文件的大小阈值，默认值为64MB。每向上提升一级，阈值会乘以因子 target_file_size_multiplier（但默认为1，即每级sstable最大都是相同的）。显然，增大此值可以降低 compaction 的频率，减少写放大，但是也会造成旧数据无法及时清理，从而增加读放大。此参数不太容易调整，一般不建议设为256MB以上。
+
+- **max_bytes_for_level_base | state.backend.rocksdb.compaction.level.max-size-level-base**
+  L1层的数据总大小阈值，默认值为256MB。每向上提升一级，阈值会乘以因子 max_bytes_for_level_multiplier（默认值为10）。由于上层的大小阈值都是以它为基础推算出来的，所以要小心调整。建议设为 target_file_size_base 的倍数，且不能太小，例如5~10倍。
+
+- **level_compaction_dynamic_level_bytes | state.backend.rocksdb.compaction.level.use-dynamic-size**
+  这个参数之前讲过。当开启之后，上述阈值的乘法因子会变成除法因子，能够动态调整每层的数据量阈值，使得较多的数据可以落在最高一层，能够减少空间放大，整个 LSM Tree 的结构也会更稳定。对于机械硬盘的环境，强烈建议开启
