[Blog-32] fix picture

--- a/_posts/2020-10-23-Iceberg数据湖.md
+++ b/_posts/2020-10-23-Iceberg数据湖.md
@@ -50,5 +50,5 @@ Kappa架构 Flink 即做流 又做批
 整个方案本质都是离线计算引擎，只能支持较低的并发，如果要支持每秒钟上千的并发，需要耗费大量的资源，增加成本。
 综上所述，这个方案目前还不能完全解决问题，只能作为一个初期的解决方案。
 
-![数据湖](/Users/jessica/ideaproject-github/jessica0530.github.io/images/posts/数据湖.png)
+![数据湖](/images/posts/数据湖.png)
 
