--- a/_posts/2020-10-23-Java面试补充.md
+++ b/_posts/2020-10-23-Java面试补充.md
@@ -1,9 +1,9 @@
 ---
 layout: post
 title: Java补充面试
-categories: [java, cate2]
-description: some word here
-keywords: keyword1, keyword2
+categories: [java]
+description: Java补充面试
+keywords: java
 ---
 
 # boolmfilter
