[Blog-33] fix picture

--- a/_posts/2020-10-23-Java面试补充.md
+++ b/_posts/2020-10-23-Java面试补充.md
@@ -22,7 +22,7 @@ keywords: java
 
 当我们往Bloom Filter中增加任意一个元素x时候，我们使用k个哈希函数得到k个哈希值，然后将数组中对应的比特位设置为1。即第i个哈希函数映射的位置hashi(x)就会被置为1（1≤i≤k）。**注意，如果一个位置多次被置为1，那么只有第一次会起作用，后面几次将没有任何效果。在下图中，k=3，且有两个哈希函数选中同一个位置（从左边数第五位，即第二个“1“处）**。 
 
-![x1和 x2hash相同的位置](/Users/jessica/ideaproject-github/jessica0530.github.io/images/posts/x1和 x2hash相同的位置.png)
+![x1和 x2hash相同的位置](/images/posts/x1和x2hash相同的位置.png)
 
 现在我们就可以判断一个元素是否在这个集合中了，比如判断y是否在这个集合中，我们只需要对y使用k个哈希函数得到k个哈希值，如果所有hashi(y)的位置都是1（1≤i≤k），即k个位置都被设置为1了，那么我们就认为y是集合中的元素，否则就认为y不是集合中的元素。下图中y1就不是集合中的元素（因为y1有一处指向了“0”位）。y2或者属于这个集合。或者刚好是一个false positive(假阳性)。
 
