[Blog-32] add 实时数仓

--- a/_posts/2020-10-23-数据湖.md
+++ b/_posts/2020-10-23-数据湖.md
@@ -102,5 +102,5 @@ Redis 和 HBASE 做 上千万的QPS 查询的话 需要 加 cache
 
 # 数据湖的技术对比
 
-。。感觉就是个 多数据源 多格式 的 metastore....
+。。感觉就是个 多数据源 多格式 的 metastore 上封装了一层调用的 API
 
