--- a/_posts/2020-11-04-Iceberg.md
+++ b/_posts/2020-11-04-Iceberg.md
@@ -10,6 +10,9 @@ keywords: 数据湖
 
 Apache Iceberg是一种新的表格格式，用于存储缓慢移动的表格数据。它旨在改进内置在Hive，Presto和Spark中的事实上的标准表布局。
 
+设计的初衷更倾向于定义一个标准,开放且通用的数据组织格式,同时屏蔽底层数据存储格式的差异,向上提供统一的操作API,使得不同的引擎可以通过
+起提供的API接入
+
 
 
 # Spark 接入 Iceberg
@@ -209,4 +212,21 @@ icebergCatalog = cacheEnabled ? CachingCatalog.wrap(originalCatalog) : originalC
 
 
 
+Iceberg表支持在库模块中组织：
 
+- `iceberg-common` 包含其他模块中使用的实用程序类
+- `iceberg-api` 包含公共的Iceberg API
+- `iceberg-core`包含Iceberg API的实现并支持Avro数据文件，**这是处理引擎应依赖的东西**
+- `iceberg-parquet` 是用于处理由Parquet文件支持的表的可选模块
+- `iceberg-arrow` 是用于将Parquet读入Arrow存储器的可选模块
+- `iceberg-orc` 是用于处理由ORC文件支持的表的可选模块
+- `iceberg-hive-metastore` 是由Hive Metastore Thrift客户端支持的Iceberg表的实现
+- `iceberg-data` 是用于直接从JVM应用程序中处理表的可选模块
+
+Iceberg这个项目还具有用于向处理引擎添加Iceberg支持的模块：
+
+- `iceberg-spark2` 是Iceberg 2.4版中Spark的Datasource V2 API的实现（使用iceberg-spark-runtime作为阴影版本）
+- `iceberg-spark3` 是Iceberg 3.0版Spark的Datasource V2 API的实现（阴影版本使用iceberg-spark3-runtime）
+- `iceberg-flink` 包含用于与Apache Flink集成的类（对阴影版本使用iceberg-flink-runtime）
+- `iceberg-mr` 包含一个InputFormat和其他用于与Apache Hive集成的类
+- `iceberg-pig` 是Pig的Iceberg的LoadFunc API的实现
