[Blog-33] add 数据湖

--- a/_posts/2020-09-15-Spark基础.md
+++ b/_posts/2020-09-15-Spark基础.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Spark
+title: Spark 基础
 categories: [spark]
 description: Spark基础
 keywords: Spark
@@ -95,9 +95,9 @@ save()
 
 ![sparksql-优化](/images/posts/sparksql-优化.png)
 
-1. ### Analysis 
+   ### Analysis 
 
-2. ### Logical optimization 
+   ### Logical optimization 
 
    #### 基于规则的优化方式(Rule-Based Optimization，简称为RBO)
 
@@ -116,9 +116,9 @@ save()
 
      如星型连接排列查询，哈希连接查询，函数索引，和并行查询等一些技术都是基于CBD的
 
-3. ### Physical planning 
+   ### Physical planning 
 
-4. ### Code generation         
+   ### Code generation         
 
    查询优化的最后阶段涉及生成可在每台计算机上运行的有效Java字节码。 因为Spark SQL可以对内存中加载的数据集进行操作，所以Spark可以使用最新的编译器技术来生成代码以加快执行速度。 换句话说，它充当编译器。 Tungsten项目在此起到了重要作用，它有助于整个阶段的代码生成。
    整个阶段的代码生成是什么？ 这是一个物理查询优化阶段，它将整个查询分解为一个函数，摆脱虚拟函数调用，并使用CPU寄存器存储中间数据。 Spark 2.0中引入的第二代Tungsten引擎使用此方法生成紧凑的RDD代码以最终执行。 这种简化的策略大大提高了CPU效率和性能。   
@@ -142,8 +142,7 @@ save()
    ## 代码生成(`Code Generation`)    
 
    
-
-   ## https://databricks.com/blog/2015/04/28/project-tungsten-bringing-spark-closer-to-bare-metal.html                       
+https://databricks.com/blog/2015/04/28/project-tungsten-bringing-spark-closer-to-bare-metal.html                       
 
    
 
