--- a/_posts/2020-10-23-数据湖.md
+++ b/_posts/2020-10-23-数据湖.md
@@ -84,6 +84,40 @@ Redis 和 HBASE 做 上千万的QPS 查询的话 需要 加 cache
 
 传统的观念认为，数据仓库构建非常困难，但现在，建设数仓可以像买一套office 一样简单。
 
+## 数据湖系统核心能力
+
+### 元数据可拓展
+
+## 流批一体
+
+## 数据修改
+
+### 数据质量
+
+### 多层底层存储
+
+### 多种引擎
+
+### ACID事务
+
+
+
+## 数据湖系统的核心组件
+
+1.构建于存储系统和文件格式之上的数据组织方式
+
+2.保证ACID事务,及一定的并发能力
+
+3.提供“行” 级别的数据修改,删除的能力
+
+4.确保schema的准确性,提供“热”变更能力
+
+
+
+
+
+
+
 
 
 # 数据仓库  VS 数据湖
@@ -102,5 +136,5 @@ Redis 和 HBASE 做 上千万的QPS 查询的话 需要 加 cache
 
 # 数据湖的技术对比
 
-。。感觉就是个 多数据源 多格式 的 metastore 上封装了一层调用的 API
+
 
