--- a/_posts/2020-11-04-Iceberg.md
+++ b/_posts/2020-11-04-Iceberg.md
@@ -1,10 +1,11 @@
 
-
+---
 layout: post
 title: Iceberg
 categories: [数据湖]
 description: 数据湖
 keywords: 数据湖
+---
 
 转载 https://new.qq.com/rain/a/20201105A035BC00
 # Iceberg
@@ -805,6 +806,7 @@ icebergCatalog = cacheEnabled ? CachingCatalog.wrap(originalCatalog) : originalC
 ```
 
 
+## Iceberg 目录结构
 
 Iceberg表支持在库模块中组织：
 
