[Blog-35] add linux epoll

--- a/_posts/2020-11-04-Iceberg.md
+++ b/_posts/2020-11-04-Iceberg.md
@@ -21,19 +21,19 @@ Apache Iceberg是一种新的表格格式，用于存储缓慢移动的表格数
 
 ### 快照(snapshot)
 
-在时间轴上线性的记录表的所有变化  (看一下hbase的 snapshot)
+在时间轴上线性的记录表的所有变化 
 
 1.在某一时刻,表的所有数据文件的列表
 
 2.每次更新操作会生成新的快照,并且原子性的commit
 
-3.实现
+3.实现  SnapshotManager
 
    原子性
 
    读写分离
 
-   时间旅行和版本回滚
+   时间旅行(数据版本)和版本回滚 
 
   增量消费
 
@@ -71,9 +71,9 @@ Data file
 
 ### 优化数据入库流程
 
-1.提供ACID事务能力,上游数据写入即可见,不影响当前数据处理任务,这大大简化了ETL(????)
+1.提供ACID事务能力(https://www.cnblogs.com/MopHunter/p/11232984.html),上游数据写入即可见,不影响当前数据处理任务,这大大简化了ETL
 
-2.Iceberg 提供 upsert /merge into 能力,可以极大的缩小数据入库延迟 (???)
+2.Iceberg 提供 upsert /merge into 能力,可以极大的缩小数据入库延迟 ()
 
 ### 统一数据存储和灵活的文件组织
 
