[Blog-44] add 面试补充

--- a/_posts/2020-10-11-面试补充.md
+++ b/_posts/2020-10-11-面试补充.md
@@ -28,3 +28,7 @@ SQL 转化上面  从 SQL语义来讲 和 Spark的 区别,Spark没有 watermark?
 
 
 BinaryRowData除了减少序列化之外 处理上面还能有什么样的优化
+
+面试中 先讲清楚概念  作用是什么,平衡了什么, 不要总把实现先讲出来
+
+Spark细致的看一遍结束
