[Blog-45] add 面试补充

--- a/_posts/2020-10-25-Flink补充内容.md
+++ b/_posts/2020-10-25-Flink补充内容.md
@@ -122,7 +122,7 @@ static final class ChildFirstClassLoader extends URLClassLoader {
 	}
 ```
 
-相同的 connector 需要提供不同的版本时（例如Phbase），类冲突不可避免
+相同的 connector 需要提供不同的版本时（例如hbase），类冲突不可避免
 有冲突的 connector 使用独立的 classloader 单独加载：
 1. connector打包到镜像中固定的目录下；
 
