[Blog-45] 移动面试补充

--- a/_drafts/2020-10-11-面试补充.md
+++ b/_drafts/2020-10-11-面试补充.md
@@ -34,3 +34,18 @@ BinaryRowData除了减少序列化之外 处理上面还能有什么样的优化
 Spark DeltaLake 之类的优化
 
 Spark细致的看一遍结束
+
+
+Kafka怎么保证不丢数据
+
+Kafka 的数据一致性 ISR列表
+
+HBase 怎么写入 
+
+cpu方面的 
+上下文切换 怎么看 
+平衡负载 loadAvg
+零copy
+
+
+
