[Blog-44] add 面试补充

--- a/_drafts/2020-10-11-面试补充.md
+++ b/_drafts/2020-10-11-面试补充.md
@@ -40,12 +40,16 @@ Kafka怎么保证不丢数据
 
 Kafka 的数据一致性 ISR列表
 
+Kafka PageCache 可能要深度理解一遍
+
 HBase 怎么写入 
 
 cpu方面的 
 上下文切换 怎么看 
 平衡负载 loadAvg
 零copy
+
+Rocksdb的优化 ？？？
 
 
 
