[Blog-45] 修改流批一体 md

--- a/_posts/2020-10-27-Flink流批统一.md
+++ b/_posts/2020-10-27-Flink流批统一.md
@@ -7,6 +7,8 @@ keywords: flink
 ---
 
 
+### 流批一体
+
 批处理是流处理的特例。不过出于批处理场景的执行效率、资源需求和复杂度各方面的考虑，在 Flink 设计之初流处理应用和批处理应用尽管底层都是流处理，但在编程 API 上是分开的。这允许 Flink 在执行层面仍沿用批处理的优化技术，并简化掉架构移除掉不需要的 watermark、checkpoint 等特性(移除)。 开个microbatch
 
 因为 Batch SQL 与 Streaming SQL 在大部分语法及语义上是一致的，不同点在于 Streaming SQL 另有拓展语法的来支持 Watermark、Time Characteristic 等流处理领域的特性，因此 SQL parser 是 Batch/Stream 共用的。关键点在于对于关系代数 RelNode 的翻译上。
