[Blog-45] add 流批一体

--- a/_posts/2020-10-27-Flink流批统一.md
+++ b/_posts/2020-10-27-Flink流批统一.md
@@ -12,7 +12,19 @@ keywords: flink
 
 ![批流一体](/images/posts/批流一体.png)
 
-### 流批一体
+
+
+### 现有问题
+
+基于批和流的两种不同计算引擎产出,难解决的是数据逻辑和口径对齐问题,很难保证两套技术开发出的数据统计结果是一致的
+
+
+
+资源方面 实时和离线资源问题,实时白天资源高峰期,晚上资源闲置,离线和实时混布自然的削峰填谷,节省资源开销
+
+
+
+### 批流一体
 
 批处理是流处理的特例。不过出于批处理场景的执行效率、资源需求和复杂度各方面的考虑，在 Flink 设计之初流处理应用和批处理应用尽管底层都是流处理，但在编程 API 上是分开的。这允许 Flink 在执行层面仍沿用批处理的优化技术，并简化掉架构移除掉不需要的 watermark、checkpoint 等特性(移除)。 开个microbatch
 
