[Blog-45] add 面试补充

--- a/_drafts/2020-10-23-Spark-SQL优化.md
+++ b/_drafts/2020-10-23-Spark-SQL优化.md
@@ -6,4 +6,115 @@ description: Spark SQL优化
 keywords: spark
 ---
 
+https://blog.csdn.net/zyq522376829/article/details/47686867
+
+### SortShuffleWriter 实现细节
+
+我们可以先考虑一个问题，假如我有 100亿条数据，但是我们的内存只有1M，但是我们磁盘很大， 我们现在要对这100亿条数据进行排序，是没法把所有的数据一次性的load进行内存进行排序的，这就涉及到一个外部排序的问题，我们的1M内存只能装进1亿条数据，每次都只能对这 1亿条数据进行排序，排好序后输出到磁盘，总共输出100个文件，最后怎么把这100个文件进行merge成一个全局有序的大文件。我们可以每个文件（有序的）都取一部分头部数据最为一个 buffer， 并且把这 100个 buffer放在一个堆里面，进行堆排序，比较方式就是对所有堆元素（buffer）的head元素进行比较大小， 然后不断的把每个堆顶的 buffer 的head 元素 pop 出来输出到最终文件中， 然后继续堆排序，继续输出。如果哪个buffer 空了，就去对应的文件中继续补充一部分数据。最终就得到一个全局有序的大文件
+
+
+
+## SparkSQL支持三种Join算法
+
+### hash join
+
+先来看看这样一条SQL语句：select * from order,item where item.id = order.i_id，很简单一个Join节点，参与join的两张表是item和order，join key分别是item.id以及order.i_id。现在假设这个Join采用的是hash join算法，整个过程会经历三步：
+
+1. 确定Build Table以及Probe Table：这个概念比较重要，Build Table使用join key构建Hash Table，而Probe Table使用join key进行探测，探测成功就可以join在一起。通常情况下，小表会作为Build Table，大表作为Probe Table。此事例中item为Build Table，order为Probe Table。
+2. 构建Hash Table：依次读取Build Table（item）的数据，对于每一行数据根据join key（item.id）进行hash，hash到对应的Bucket，生成hash table中的一条记录。数据缓存在内存中，如果内存放不下需要dump到外存。
+3. 探测：再依次扫描Probe Table（order）的数据，使用相同的hash函数映射Hash Table中的记录，映射成功之后再检查join条件（item.id = order.i_id），如果匹配成功就可以将两者join在一起。
+
+基本流程可以参考上图，这里有两个小问题需要关注：
+
+1. hash join性能如何？很显然，hash join基本都只扫描两表一次，可以认为o(a+b)，较之最极端的笛卡尔集运算a*b，不知甩了多少条街。
+2. 为什么Build Table选择小表？道理很简单，因为构建的Hash Table最好能全部加载在内存，效率最高；这也决定了hash join算法只适合至少一个小表的join场景，对于两个大表的join场景并不适用。
+
+上文说过，hash join是传统数据库中的单机join算法，在分布式环境下需要经过一定的分布式改造，就是尽可能利用分布式计算资源进行并行化计算，提高总体效率。hash join分布式改造一般有两种经典方案：
+
+1. broadcast hash join：将其中一张小表广播分发到另一张大表所在的分区节点上，分别并发地与其上的分区记录进行hash join。broadcast适用于小表很小，可以直接广播的场景。
+2. shuffler hash join：一旦小表数据量较大，此时就不再适合进行广播分发。这种情况下，可以根据join key相同必然分区相同的原理，将两张表分别按照join key进行重新组织分区，这样就可以将join分而治之，划分为很多小join，充分利用集群资源并行化。
+
+### Shuffle hash join
+
+
+
+1. shuffle阶段：分别将两个表按照join key进行分区，将相同join key的记录重分布到同一节点，两张表的数据会被重分布到集群中所有节点。这个过程称为shuffle。
+
+2. hash join阶段：每个分区节点上的数据单独执行单机hash join算法。
+
+   
+
+   
+
+### Sort Merge Join
+
+1. shuffle阶段：将两张大表根据join key进行重新分区，两张表数据会分布到整个集群，以便分布式并行处理。
+2. sort阶段：对单个分区节点的两表数据，分别进行排序。
+3. merge阶段：对排好序的两张分区表数据执行join操作。join操作很简单，分别遍历两个有序序列，碰到相同join key就merge输出，否则取更小一边
+
+
+
+## Bucket改进
+
+在我们join两个表的时候，如果两个表最好按照相同的列划分成相同的buckets，就可以完全避免shuffle。根据前面所述的hash值计算方法，两个表具有相同列值的数据会存放在相同的机器上，这样在进行join操作时就不需要再去和其他机器通讯，直接在本地完成计算即可。假设你有左右两个表，各有两个分区，那么join的时候实际计算就是下图的样子，两个机器进行计算，并且计算后分区还是2.
+
+什么是 Bucketing
+
+Bucketing 就是利用 buckets（按列进行分桶）来决定数据分区（partition）的一种优化技术，它可以帮助在计算中避免数据交换（avoid data shuffle）。并行计算的时候shuffle常常会耗费非常多的时间和资源.
+
+Bucketing 的基本原理比较好理解，它会根据你指定的列（可以是一个也可以是多个）计算哈希值，然后具有相同哈希值的数据将会被分到相同的分区。
+
+
+
+
+
+Join双方数据分布不一致,需先Shuffle后Join
+
+
+
+## Sort Merge Join
+
+
+
+## 物化列
+
+读复杂类型列 
+
+(Map/Struct/Array)
+
+
+
+读取大量不必要的数据
+
+复杂类型不能进行向量化读取
+
+复杂类型列上的Filter无法下推
+
+重复计算:Json字符串字段提取CPU消耗大
+
+## 物化视图
+
+OLAP 查询中,会经常基于表的某些固定字段进行Aggregate,Join等耗时操作,造成大量重复性计算,浪费资源,并会影响查询的响应时间
+
+物化视图
+
+1.预先计算并保存Aggregate,Join等耗时操作的结果
+
+2.按需更新,保证与源表数据的一致性
+
+3.对用户完全透明,由SQL引擎完成：物化视图匹配,最优物化视图选取
+
+Query Rewrite
+
+4.支持部分匹配
+
+5.支持Rollup
+
+
+
+
+
+
+
+
 
